# learn-opengl

./: .gitignore  CMakeLists.txt  README.md  readme.md
.github/workflows/: cmake-single-platform.yml
res/shaders/: Basic.glsl  Basic.shader
src/: Application.cpp  Camera.cpp  Camera.hpp  GLUtils.cpp  GLUtils.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Renderer.cpp  Renderer.hpp  Shaders.cpp  Shaders.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp  main.cpp
